--- a/index.html
+++ b/index.html
@@ -4,9 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./css/main.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Curriculum vitae</h1>
+    <hr />
+        <h2> Persoonlijke gegevens</h2>
+            <p><span class="important">Naam:</span> De Spiegeleer<br>
+            <span class="important">Voornaam:</span> Jana<br>
+            <span class="important">E-mail:</span> janadesp@student.arteveldehs.be<br>
+            <span class="important">GSM</span> 0471/31.98.41<br>
+            <span class="important">Adres:</span> Hoogstraat 66, 9550 Herzele<br>
+            <span class="important">Geboortedatum:</span> 19 augustus 1998<br>
+            <span class="important">Geboorteplaats:</span> Zottegem<br>
+            <span class="important">Geslacht:</span> vrouw<br>
+            <span class="important">Nationaliteit:</span> Belg<br>
+            <span class="important">Rijbewijs:</span> B<br>
+            </p>
+        <h2>Talen</h2>
+            <p><span class="important">Moedertaal:</span> Nederlands<br>
+            <span class="important">Andere:</span>
+            </p>
+        <h2>Werkervaring</h2>
+            <p><span class="important">Studentenjob:</span> <br>
+            winkelbediende in de sportwinkel Hotsport.<br>
+            Onthaal op een beurs.<br>
+            Horeca (privéfeesten)
+            </p>
+        <h2>Opleindingen</h2>
+            <p><span class="important">Secundair:</span> <br>
+            Humane wetenschappen<br>
+            Diploma Fotografie (academie Zottegem)
+            </p>   
 </body>
 </html>
